--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"axios": "^1.6.8",
 		"ethers": "^6.11.1",
 		"framer-motion": "^10.16.16",
+		"pannellum-react": "^1.2.4",
 		"react": "^18.2.0",
+		"react-color": "^2.19.3",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.45.2",
 		"react-icons": "^4.10.1",
 		"react-router-dom": "^6.14.1",
 		"react-toastify": "^9.1.3",
 		"react-top-loading-bar": "^2.3.1",
+		"three": "^0.164.1",
 		"tw-elements": "^1.0.0-beta2",
 		"vaul": "^0.1.1"
 	},
